fixed spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,40 +1,81 @@
 @import url('https://fonts.googleapis.com/css?family=Days+One|Dosis:800&display=swap');
 
 body {
-    background: rgb(226, 206, 206);
+    background: rgb(136, 230, 82);
 }
 
 header {
-    background: rgb(221, 219, 212);
+    background: rgb(133, 182, 204);
 }
 
 nav {
-    background: rgb(153, 140, 140);
-    background: rgb(231, 123, 123);
+    background: rgb(117, 124, 163);
 }
 
 div {
-    background: rgb(231, 212, 212);
+    background: rgb(131, 63, 63);
 }
 
 footer {
-    background: rgb(218, 207, 207);
+    background: rgb(145, 136, 136);
 }
 
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    /* color: rgb(5, 18, 44); */
+    margin-bottom: 0rem;
+    font-weight: 500;
+    /* line-height: -12.8; */
 }
 
-.btn {
-    color: red;
-
-}
+.btn {}
 
 p {
     color: rgb(36, 36, 78);
 }
+
+/* .navbar {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: .5rem 1rem;
+    padding-top: 0.5rem;
+    padding-right: 1rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+}
+
+.navbar {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: .5rem 1rem;
+    padding-top: 0.5rem;
+    padding-right: 1rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+}
+
+.navbar-light {
+    background-color: rgb(175, 159, 159);
+    height: 55px;
+    line-height: 14px;
+    letter-spacing: 0.1em;
+} */
